Clang compilation error fix.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,4 +1,4 @@
-if ( NOT MSVC )
+if ( CMAKE_CXX_COMPILER_ID STREQUAL "GNU" )
 	add_executable( print-instructions-benchmark print-instructions-benchmark.cpp )
 	target_link_libraries( print-instructions-benchmark tableprinter::tableprinter )
 endif()
