read-scores example added. A demonstration how table-like output is convenient.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -3,3 +3,6 @@ target_link_libraries( print-instructions-benchmark tableprinter::tableprinter )
 
 add_executable( print-scores print-scores.cpp )
 target_link_libraries( print-scores tableprinter::tableprinter )
+
+add_executable( read-scores read-scores.cpp )
+target_link_libraries( read-scores tableprinter::tableprinter )
