print-colors example added.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -6,3 +6,6 @@ target_link_libraries( print-scores tableprinter::tableprinter )
 
 add_executable( read-scores read-scores.cpp )
 target_link_libraries( read-scores tableprinter::tableprinter )
+
+add_executable( print-colors print-colors.cpp )
+target_link_libraries( print-colors tableprinter::tableprinter )
